-- =====================================================
-- COFFEE SHOP DATABASE SCHEMA

-- =====================================================

-- =====================================================
-- ENUM TYPES
-- =====================================================

DO $$ BEGIN
  CREATE TYPE user_role AS ENUM ('client', 'staff', 'admin');
EXCEPTION WHEN duplicate_object THEN NULL;
END $$;

DO $$ BEGIN
  CREATE TYPE category_type AS ENUM ('drink', 'dessert');
EXCEPTION WHEN duplicate_object THEN NULL;
END $$;

DO $$ BEGIN
  CREATE TYPE order_status AS ENUM ('new', 'brewing', 'preparing', 'ready', 'completed');
EXCEPTION WHEN duplicate_object THEN NULL;
END $$;

DO $$ BEGIN
  CREATE TYPE option_type_enum AS ENUM ('size', 'milk', 'sugar', 'addon');
EXCEPTION WHEN duplicate_object THEN NULL;
END $$;

DO $$ BEGIN
  CREATE TYPE assistance_status AS ENUM ('pending', 'handled');
EXCEPTION WHEN duplicate_object THEN NULL;
END $$;

-- =====================================================
-- USERS
-- =====================================================

CREATE TABLE IF NOT EXISTS users (
    id SERIAL PRIMARY KEY,
    full_name VARCHAR(150) NOT NULL,
    phone VARCHAR(30),
    email VARCHAR(150) UNIQUE,
    password_hash VARCHAR(255),
    role user_role NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- =====================================================
-- TABLES (CAFE TABLES)
-- =====================================================

CREATE TABLE IF NOT EXISTS tables (
    id SERIAL PRIMARY KEY,
    table_number INT UNIQUE NOT NULL,
    qr_code VARCHAR(255) UNIQUE,
    is_active BOOLEAN DEFAULT TRUE
);

-- =====================================================
-- SESSIONS (ANONYMOUS CUSTOMER SESSIONS)
-- =====================================================

CREATE TABLE IF NOT EXISTS sessions (
    id SERIAL PRIMARY KEY,
    table_id INT REFERENCES tables(id) ON DELETE SET NULL,
    token VARCHAR(255) UNIQUE NOT NULL,
    customer_name VARCHAR(150),
    phone_number VARCHAR(30),
    customer_id_number VARCHAR(50),
    loyalty_account_id INT,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    last_active_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    expires_at TIMESTAMP,
    is_closed BOOLEAN DEFAULT FALSE,
    closed_at TIMESTAMP
);

-- Mise à niveau sessions existantes (expiration + fermeture)
ALTER TABLE sessions ADD COLUMN IF NOT EXISTS expires_at TIMESTAMP;
ALTER TABLE sessions ADD COLUMN IF NOT EXISTS is_closed BOOLEAN DEFAULT FALSE;
ALTER TABLE sessions ADD COLUMN IF NOT EXISTS closed_at TIMESTAMP;
UPDATE sessions
SET expires_at = created_at + INTERVAL '2 hours'
WHERE expires_at IS NULL;

-- =====================================================
-- CATEGORIES
-- =====================================================

CREATE TABLE IF NOT EXISTS categories (
    id SERIAL PRIMARY KEY,
    name VARCHAR(100) UNIQUE NOT NULL,
    type category_type NOT NULL,
    display_order INT
);

-- =====================================================
-- PRODUCTS
-- =====================================================

CREATE TABLE IF NOT EXISTS products (
    id SERIAL PRIMARY KEY,
    category_id INT REFERENCES categories(id) ON DELETE SET NULL,
    name VARCHAR(150) UNIQUE NOT NULL,
    description TEXT,
    -- TND: on garde 3 décimales (millimes)
    price DECIMAL(10,3) NOT NULL,
    image_url VARCHAR(255),
    is_active BOOLEAN DEFAULT TRUE,
    is_seasonal BOOLEAN DEFAULT FALSE,
    is_trending BOOLEAN DEFAULT FALSE,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- =====================================================
-- PRODUCT OPTIONS
-- =====================================================

CREATE TABLE IF NOT EXISTS product_options (
    id SERIAL PRIMARY KEY,
    product_id INT REFERENCES products(id) ON DELETE CASCADE,
    option_type option_type_enum NOT NULL,
    name VARCHAR(100) NOT NULL,
    price_modifier DECIMAL(10,3) DEFAULT 0
);

-- =====================================================
-- ORDERS
-- =====================================================

CREATE TABLE IF NOT EXISTS orders (
    id SERIAL PRIMARY KEY,
    table_id INT REFERENCES tables(id) ON DELETE SET NULL,
    session_id INT REFERENCES sessions(id) ON DELETE SET NULL,
    user_id INT REFERENCES users(id) ON DELETE SET NULL,
    status order_status DEFAULT 'new',
    total_price DECIMAL(10,3),
    loyalty_used BOOLEAN DEFAULT FALSE,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    completed_at TIMESTAMP
);

-- =====================================================
-- ORDER ITEMS
-- =====================================================

CREATE TABLE IF NOT EXISTS order_items (
    id SERIAL PRIMARY KEY,
    order_id INT REFERENCES orders(id) ON DELETE CASCADE,
    product_id INT REFERENCES products(id) ON DELETE SET NULL,
    quantity INT NOT NULL,
    unit_price DECIMAL(10,3) NOT NULL,
    subtotal DECIMAL(10,3) NOT NULL
);

-- =====================================================
-- ORDER ITEM OPTIONS
-- =====================================================

CREATE TABLE IF NOT EXISTS order_item_options (
    id SERIAL PRIMARY KEY,
    order_item_id INT REFERENCES order_items(id) ON DELETE CASCADE,
    option_name VARCHAR(100),
    price_modifier DECIMAL(10,3) DEFAULT 0
);

-- =====================================================
-- ORDER STATUS HISTORY
-- =====================================================

CREATE TABLE IF NOT EXISTS order_status_history (
    id SERIAL PRIMARY KEY,
    order_id INT REFERENCES orders(id) ON DELETE CASCADE,
    status order_status NOT NULL,
    changed_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    changed_by INT REFERENCES users(id) ON DELETE SET NULL
);

-- =====================================================
-- MONEY PRECISION (TND millimes) — upgrade existing DBs
-- =====================================================
-- If the DB was created with DECIMAL(10,2), these ALTERs upgrade it to DECIMAL(10,3)
-- to avoid losing precision (ex: 10.500 TND). Safe to run multiple times.

ALTER TABLE IF EXISTS products
  ALTER COLUMN price TYPE DECIMAL(10,3)
  USING price::DECIMAL(10,3);

ALTER TABLE IF EXISTS product_options
  ALTER COLUMN price_modifier TYPE DECIMAL(10,3)
  USING price_modifier::DECIMAL(10,3);

ALTER TABLE IF EXISTS orders
  ALTER COLUMN total_price TYPE DECIMAL(10,3)
  USING total_price::DECIMAL(10,3);

ALTER TABLE IF EXISTS order_items
  ALTER COLUMN unit_price TYPE DECIMAL(10,3)
  USING unit_price::DECIMAL(10,3);

ALTER TABLE IF EXISTS order_items
  ALTER COLUMN subtotal TYPE DECIMAL(10,3)
  USING subtotal::DECIMAL(10,3);

ALTER TABLE IF EXISTS order_item_options
  ALTER COLUMN price_modifier TYPE DECIMAL(10,3)
  USING price_modifier::DECIMAL(10,3);

-- =====================================================
-- LOYALTY ACCOUNTS (NAME-BASED, NO ACCOUNT REQUIRED)
-- =====================================================

CREATE TABLE IF NOT EXISTS loyalty_accounts (
    id SERIAL PRIMARY KEY,
    customer_name VARCHAR(150) NOT NULL,
    customer_id_number VARCHAR(50),
    phone_number VARCHAR(30),
    points INT DEFAULT 0,
    total_earned INT DEFAULT 0,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    UNIQUE(customer_name, customer_id_number)
);

-- =====================================================
-- LOYALTY TRANSACTIONS
-- =====================================================

CREATE TABLE IF NOT EXISTS loyalty_transactions (
    id SERIAL PRIMARY KEY,
    loyalty_id INT REFERENCES loyalty_accounts(id) ON DELETE CASCADE,
    order_id INT REFERENCES orders(id) ON DELETE SET NULL,
    points_added INT DEFAULT 0,
    points_used INT DEFAULT 0,
    source_type VARCHAR(30),
    source_id INT,
    event_key VARCHAR(120),
    note TEXT,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE UNIQUE INDEX IF NOT EXISTS uq_loyalty_transactions_event_key
  ON loyalty_transactions(event_key)
  WHERE event_key IS NOT NULL;

-- =====================================================
-- GAMES
-- =====================================================

CREATE TABLE IF NOT EXISTS games (
    id SERIAL PRIMARY KEY,
    name VARCHAR(150) NOT NULL,
    is_active BOOLEAN DEFAULT TRUE
);

-- Journal des réponses pour recalcul anti-fraude du score côté serveur
CREATE TABLE IF NOT EXISTS game_answer_logs (
    id SERIAL PRIMARY KEY,
    session_id INT REFERENCES sessions(id) ON DELETE CASCADE,
    game_id INT REFERENCES games(id) ON DELETE CASCADE,
    mode VARCHAR(20) NOT NULL CHECK (mode IN ('quiz', 'word_scramble')),
    question_id INT,
    word_id INT,
    provided_answer VARCHAR(255),
    is_correct BOOLEAN NOT NULL DEFAULT false,
    points_awarded INT NOT NULL DEFAULT 0,
    consumed_at TIMESTAMP NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);
CREATE INDEX IF NOT EXISTS idx_game_answer_logs_session_game
  ON game_answer_logs(session_id, game_id, consumed_at, created_at);

-- =====================================================
-- GAME SESSIONS (Moved after GAMES)
-- =====================================================

CREATE TABLE IF NOT EXISTS game_sessions (
    id SERIAL PRIMARY KEY,
    game_id INT REFERENCES games(id) ON DELETE CASCADE,
    user_id INT REFERENCES users(id) ON DELETE SET NULL,
    table_id INT REFERENCES tables(id) ON DELETE SET NULL,
    score INT,
    reward_points INT DEFAULT 0,
    played_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);


-- =====================================================
-- ASSISTANCE REQUESTS (CALL WAITER)
-- =====================================================

CREATE TABLE IF NOT EXISTS assistance_requests (
    id SERIAL PRIMARY KEY,
    table_id INT REFERENCES tables(id) ON DELETE CASCADE,
    status assistance_status DEFAULT 'pending',
    requested_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    handled_at TIMESTAMP
);

-- =====================================================
-- DAILY PRODUCT STATS
-- =====================================================

CREATE TABLE IF NOT EXISTS daily_product_stats (
    id SERIAL PRIMARY KEY,
    product_id INT REFERENCES products(id) ON DELETE CASCADE,
    date DATE NOT NULL,
    quantity_sold INT DEFAULT 0
);

-- =====================================================
-- DAILY STATS
-- =====================================================

CREATE TABLE IF NOT EXISTS daily_stats (
    date DATE PRIMARY KEY,
    total_orders INT DEFAULT 0,
    total_revenue DECIMAL(10,2) DEFAULT 0,
    avg_preparation_time FLOAT DEFAULT 0,
    loyalty_usage_rate FLOAT DEFAULT 0
);

-- =====================================================
-- INDEXES FOR PERFORMANCE
-- =====================================================

CREATE INDEX IF NOT EXISTS idx_products_category ON products(category_id);
CREATE INDEX IF NOT EXISTS idx_products_active ON products(is_active);
CREATE INDEX IF NOT EXISTS idx_orders_table ON orders(table_id);
CREATE INDEX IF NOT EXISTS idx_orders_user ON orders(user_id);
CREATE INDEX IF NOT EXISTS idx_orders_status ON orders(status);
CREATE INDEX IF NOT EXISTS idx_order_items_order ON order_items(order_id);
CREATE INDEX IF NOT EXISTS idx_assistance_requests_table ON assistance_requests(table_id);
CREATE INDEX IF NOT EXISTS idx_assistance_requests_status ON assistance_requests(status);
